cloud/W10/lab/gatekeeper/custom-policy.yaml
# Constraint Template (Định nghĩa luật Rego)
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
  annotations:
    argocd.argoproj.io/sync-wave: "1" # Bắt buộc phải tạo Template trước
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("Bạn phải cung cấp các labels sau: %v", [missing])
        }
---
# Constraint: Bắt buộc namespace demo phải có nhãn "owner"
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-owner-label
  annotations:
    argocd.argoproj.io/sync-wave: "2" # Phải chờ Template tạo xong mới được tạo luật này
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "Rollout"]
    namespaces: ["demo"]
  parameters:
    labels: ["owner"]
